<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appDescription"
            android:textSize="18sp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        tools:context="com.example.android.courtcounter.MainActivity">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/teamA"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp"/>

            <Button
                android:id="@+id/touchdown_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="touchdownTeamA"
                android:text="@string/touchdown"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/fieldgoal_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="fieldgoalTeamA"
                android:text="@string/fieldgoal"
                android:textSize="12sp"></Button>

            <Button
                android:id="@+id/pointsConversion_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="twoPointsConversionTeamA"
                android:text="@string/pointConversion"
                android:textSize="12sp"></Button>
            <Button
                android:id="@+id/safety_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="safetyTeamA"
                android:text="@string/safety"
                android:textSize="12sp"></Button>

            <Button
                android:id="@+id/extraPoint_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="extraPointTeamA"
                android:text="@string/extraPoint"
                android:textSize="12sp"></Button>
        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#45c1c1"></View>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/teamB"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp"/>

            <Button
                android:id="@+id/touchdown_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="touchdownTeamB"
                android:text="@string/touchdown"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/fieldgoal_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="fieldgoalTeamB"
                android:text="@string/fieldgoal"
                android:textSize="12sp"></Button>

            <Button
                android:id="@+id/pointsConversion_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="twoPointsConversionTeamB"
                android:text="@string/pointConversion"
                android:textSize="12sp"></Button>
            <Button
                android:id="@+id/safety_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="safetyTeamB"
                android:text="@string/safety"
                android:textSize="12sp"></Button>

            <Button
                android:id="@+id/extraPoint_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="extraPointTeamB"
                android:text="@string/extraPoint"
                android:textSize="12sp"></Button>
        </LinearLayout>



    </LinearLayout>


    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:onClick="resetScore"
        android:text="reset" />

    <LinearLayout
        android:id="@+id/legendLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/legend"/>

    </LinearLayout>

</RelativeLayout>